Trying to fix dark mode switch on mobile | Commit 8

--- a/site/styles/base.scss
+++ b/site/styles/base.scss
@@ -1,6 +1,7 @@
 @import "main";
 
 :root {
+  --hashtag-colors-chakra-body-bg: teal;
   --primary: #ffffff;
   --primary-2: #f1f3f5;
   --secondary: #000000;
